# flutter-vibe-sample

./: .gitignore  AGENTS.md  CLAUDE.md  DOCKER_COMMANDS.md  FIXES_APPLIED.md  MACOS_NETWORK_FIX.md  QUICKSTART_VISUAL_NOTES.md  REACT_NATIVE_IMPLEMENTATION.md  README.md  ROUTER_FIX.md  TODO-flutter.md  VISUAL.md  VISUAL_NOTES_IMPLEMENTATION.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  db.sqlite3  entrypoint.sh  pyproject.toml
backend/apps/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/notes/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py  vision.py
backend/apps/notes/migrations/: 0001_initial.py  0002_noteimage.py
backend/nomad_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/tests/: test_auth_flow.py
nomad_notes/: README.md  TEST_PROPOSAL_PERMISSIONS.md  pubspec.yaml
nomad_notes/android/app/: build.gradle.kts
nomad_notes/ios/Runner/: AppDelegate.swift  Info.plist  (+1 more)
nomad_notes/ios/Runner.xcodeproj/: project.pbxproj
nomad_notes/lib/: main.dart
nomad_notes/linux/: CMakeLists.txt
nomad_notes/test/: widget_test.dart
nomad_notes/web/: index.html  manifest.json
nomad_notes/windows/: CMakeLists.txt
nomad_notes_rn/: .env.example  .gitignore  App.tsx  BUILD_NATIVE_IOS.md  EXPO_ERROR_FIX.md  NETWORK_DEBUG.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SIMULATOR_TESTING.md  STARTUP_FIX.md  app.config.js  app.json  package.json  tsconfig.json
nomad_notes_rn/.expo-shared/: assets.json
(+58 files in other folders)
